# toy_kernel

./: .gitignore  CMakeLists.txt  Makefile  README.md  grub.cfg  kernel.c  run.sh  stdlib.c  stdlib.h  vga_mode.c  vga_mode.h
include/: gdt.h  stdlib.h  vga_mode.h  x86_instructions.h
src/: boot.s  gdt.c  kernel.c  stdlib.c  vga_mode.c  x86_instructions.c
